# PointPredictionUncertainty

./: .gitignore  README.md  pyproject.toml
docs/: README.md  mkdocs.yml  references.bib
docs/source/: index.md  problem_statement.md
notebooks/: 0_bivariate_normal.ipynb  0_toy_generators.ipynb  1_bivariate_normal_pdf.ipynb  2_beta_grid.ipynb  BI.ipynb  Variance_uncertainty.ipynb  dataset.py  models.py  utils.py
papers/: README.md
src/ppu/: __about__.py  __init__.py  generator.py
src/ppu/methods/: beta.py  bregman.py  mlp.py  utils.py
src/ppu/viz/: __init__.py  beta_plot.py  bregman_plot.py  color.py  contours.py  ellipse.py  legend.py  scatter.py
